--- a/style.css
+++ b/style.css
@@ -2,36 +2,18 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black; /* Plano de fundo preto */
+    font-size: 16px; /* Tamanho base da fonte */
     color: white; /* Texto branco */
 }
 
 header {
+    position: relative;
     text-align: center;
-    padding: 20px 0;
 }
 
 .header-image {
     max-width: 100%;
     height: auto;
-}
-
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-.message {
-    background-color: #222; /* Cor de fundo escura para destacar o conteúdo */
-    padding: 55px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    text-align: justify; /* Alinha o texto justificado */
-}
-
-.message p {
-    margin: 35px 0;
 }
 
 .header-overlay {
@@ -43,4 +25,21 @@ header {
     background: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%);
 }
 
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
+.message {
+    background-color: #222; /* Cor de fundo escura para destacar o conteúdo */
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    text-align: justify; /* Alinha o texto justificado */
+}
+
+.message p {
+    margin: 10px 0;
+    font-size: 18px; /* Tamanho da fonte do parágrafo */
+}
